# ssh-app

./: .gitignore  Cargo.toml
ssh-server/: Cargo.toml
ssh-server/src/: main.rs
ssh-server/src/ssh/: app.rs  auth.rs  keypair.rs  mod.rs  server.rs  terminal.rs
tui-app/: Cargo.toml  LICENSE  README.md
tui-app/src/: app.rs  brand.rs  lib.rs  main.rs
tui-app/src/components/: discord.rs  mod.rs  welcome.rs
