[package]
name = "tui-app"
version = "0.1.0"
description = "Tui app to display in the ssh server"
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
color-eyre = "0.6.3"
reqwest = { version = "0.12.20", features = ["json"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
futures = "0.3.31"
log = "0.4.11"
